2005-09-22  Adam Jocksch  <ajocksch@redhat.com>

	* dom/DOMTag.java (createDOMTag): Added.
	(getElement): Added.

	* dom/DOMLine.java: Removed extraneous import.
	(createDOMLine): Added.
	(getElement): Added.
	(addTag): Added.

	* dom/DOMSource.java (createDOMSource): Added.
	(getElement): Added.
	(addLine): Added.

	* dom/DOMImage.java (createDOMImage): Added.
	(getElement): Added.
	(addSource): Added.
	(addInlinedFunction): Added.

	* dom/DOMInlinedFunc.java (getElement): Added.

2005-09-22  Adam Jocksch  <ajocksch@redhat.com>

	* dom/DOMLine.java (hasBreakpoint): Added.

2005-09-21  Adam Jocksch  <ajocksch@redhat.com>

	* dom/DOMInlinedFunc.java: Added.

	* dom/DOMInlinedInstance.java: Added.

	* dom/DOMImage.java (getInlinedFunctions): Added.

	* dom/DOMLine.java: Added private member inlines.
	(getInlines): Added.

2005-09-21  Adam Jocksch  <ajocksch@redhat.com>

	* dom/DOMSource.java: fixed warning about serialVersionUID not 
	being found and Added javadoc comments. Extracted constants.

	* dom/DOMGetter.java: Added javadoc comments and extracted constants.

	* dom/DOMImage.java: Ditto.

	* dom/DOMTag.java: Ditto.
	
	* dom/DOMLine.java: Added javadoc comments and extracted constants.
	(getTag): Index can now be relative to line or start of file.
	

2005-09-20  Adam Jocksch  <ajocksch@redhat.com>

	* dom: Added.

	* dom/DOMGetter.java: Ditto.

	* dom/DOMImage.java: Ditto.

	* dom/DOMSource.java: Ditto.

	* dom/DOMLine.java: Ditto.

	* dom/DOMTag.java: Ditto.

2005-09-15  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (createMenus): Added casts to fix compilation error.
	(createToolbar): Ditto.

2005-09-14  Adam Jocksch  <ajocksch@redhat.com>

	* StaticParser.java (parse): Removed public identifier to get rid of compiler warning.

	* SourceViewWidget.java: Added constants for class specifier properties.
	(drawMargin): Added colored margins for expanded inline code.
	