@@ -1,5 +1,15 @@
 2005-09-22  Adam Jocksch  <ajocksch@redhat.com>
 
+	* dom/DOMInlineFunc (createDOMInlineFunc): Added.
+
+	* dom/DOMImage (getInlinedFunctions): Moved to dom/DOMSource.
+	(addInlineFunciton): Ditto.
+
+	* dom/DOMSource (getInlinedFunctions): Moved here from dom/DOMImage.
+	(addInlineFunction): Ditto.
+
+2005-09-22  Adam Jocksch  <ajocksch@redhat.com>
+
 	* dom/DOMTag.java (createDOMTag): Added.
 	(getElement): Added.
 
